--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+	<!-- aula 32 - explica como inserir fragments: "fragments/header" é o diretorio e "cabecalho" é o parametro para que seja encontrado -->
 	<header th:replace="fragments/header :: cabecalho">
 		<div>header</div>
 	</header>
@@ -38,29 +39,29 @@
 		</section>
 	</div>
 
+	<!-- aula 32 - explica como inserir fragments: "fragments/footer" é o diretorio e "rodape" é o parametro para que seja encontrado -->
 	<footer th:replace="fragments/footer :: rodape">
 		<div>footer</div>
 	</footer>
-	
+
 	<!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="/webjars/jquery/jquery.min.js"></script>
 	<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
-	<script	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript">
-	    
 		$(function() {
 			$('[data-toggle="popover"]').popover();
 		});
-		
-		$(document).ready(function(){
-		    $(".navbar-toggle").click(function(){
-		        $(".sidebar").toggleClass("sidebar-open");
-		    })
-		});
 
+		$(document).ready(function() {
+			$(".navbar-toggle").click(function() {
+				$(".sidebar").toggleClass("sidebar-open");
+			})
+		});
 	</script>
 </body>
 </html>
