Aula 33 - Fragmentando o sidebar e a pagina home - utilizacao de novo recurso para fragmento

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -34,6 +34,7 @@
 			</nav>
 		</aside>
 
+		<!-- aula 33 - utilizacao do componente "layout:fragment" que é mais avançado para determinadas situações em relação ao th:fragment-->
 		<section layout:fragment="corpo">
 			<div>conteudo principal das páginas</div>
 		</section>
