Aula 34 - Fragmentando paginas de cadastros e listagens

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
+<!-- aula 34 - lembrar de usar o layout:fragment na section em conjunto do layout:decorate -->
 <html layout:decorate="~{layout}">
 <head>
 <meta charset="UTF-8" />
 </head>
 <body>
-
-
-
+	<!-- aula 34 - lembrar de usar o layout:fragment na section em conjunto do layout:decorate -->
 	<section class="layout-content" layout:fragment="corpo">
 
 		<nav class="navbar navbar-expand-md bg-light">
