--- a/src/main/resources/templates/departamento/cadastro.html
+++ b/src/main/resources/templates/departamento/cadastro.html
@@ -21,13 +21,16 @@
 			</div>
 		</nav>
 
+		<!-- aula 36: th:object e th:field: sao capazes de instanciar um objeto e setar seus atributos -->
 		<div class="container" id="cadastro">
-			<form action="/departamentos/salvar" method="POST">
+			<!-- atenção: AULA 36: 7:50 - o objeto "${departamento}" deve estar também declarado no backend/endpoint de acesso a pagina de cadastro, caso contrario lança excessão -->
+			<form th:action="@{/departamentos/salvar}"
+				th:object="${departamento}" method="POST">
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="nome">Departamento</label> <input type="text"
 							class="form-control" id="nome" placeholder="Nome Departamento"
-							autofocus="autofocus" name="nome" value="" />
+							autofocus="autofocus" th:field="*{nome}" />
 					</div>
 				</div>
 				<input type="hidden" id="id" name="id" value="" />
