--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -33,12 +33,14 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="nomeVariavelQlqr : ${departamentosVariavelController}">
+						<tr
+							th:each="nomeVariavelQlqr : ${departamentosVariavelController}">
 							<td th:text="${nomeVariavelQlqr.id}"></td>
 							<td th:text="${nomeVariavelQlqr.nome}"></td>
 							<td colspan="2"><a class="btn btn-info btn-sm"
-								href="/departamentos/editar/3" role="button"> <span
-									class="oi oi-brush" title="Editar" aria-hidden="true"></span>
+								th:href="@{/departamentos/editar/{id} (id=${nomeVariavelQlqr.id})}"
+								role="button"> <span class="oi oi-brush" title="Editar"
+									aria-hidden="true"></span>
 							</a>
 								<button id="btn_departamentos/excluir/3" type="button"
 									class="btn btn-danger btn-sm">
