--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -41,9 +41,17 @@
 								th:href="@{/departamentos/editar/{id} (id=${nomeVariavelQlqr.id})}"
 								role="button"> <span class="oi oi-brush" title="Editar"
 									aria-hidden="true"></span>
-							</a>
-								<button id="btn_departamentos/excluir/3" type="button"
-									class="btn btn-danger btn-sm">
+							</a> 
+							
+								<!--Aula 40 - data-toggle: é um componente do bootstrap e seu valor é para que o 
+								bootstrap saiba que irá trabalhar com um componente modal --> 
+								<!--Aula 40 - data-target: é o alvo a ser chamado, no caso o id do fragment modal -->
+								<!--Aula 40 - "btn_departamentos": funçoes javascript de escuta de evento de clique 
+								inseridas no layout.html trabalham em conjunto com o sufixo btn_ para gerar o modal -->
+								<button
+									th:id="${'btn_departamentos/excluir/' + nomeVariavelQlqr.id}"
+									type="button" class="btn btn-danger btn-sm" data-toggle="modal"
+									data-target="#myModal">
 									<span class="oi oi-circle-x" title="Exclusão desabilitada"
 										aria-hidden="true"></span>
 								</button></td>
@@ -53,6 +61,7 @@
 			</div>
 		</div>
 
+		<div th:replace="fragments/modal :: modal"></div>
 	</section>
 </body>
 </html>
