--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -3,7 +3,7 @@
 <head><meta charset="UTF-8"/></head>
 <body>
 	
-	<!--CONFIRM MODAL-->
+	<!--aula 40 - CONFIRM MODAL-->
     <div class="modal fade" tabindex="-1" role="dialog" id="myModal" th:fragment="modal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
