--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -22,6 +22,10 @@
 		</nav>
 
 		<div class="container" id="listagem">
+			
+			<!-- aula 41 - usa a pagina de alert como um fragmento para exibir mensagens de sucess ou fail -->
+			<!-- aula 41 - quem comanda os alerts são os métodos do controller -->
+			<div th:replace="fragments/alert"></div>
 
 			<div class="table-responsive">
 				<table class="table table-striped table-hover table-sm">
