--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -37,10 +37,10 @@
 							<td th:text="${nomeVariavelQlqr.id}">1</td>
 							<td th:text="${nomeVariavelQlqr.nome}"></td>
 							<td th:text="${nomeVariavelQlqr.departamento.nome}"></td>
-							<td colspan="2"><a class="btn btn-info btn-sm"
-								href="/cargos/editar/1" role="button"> <span
-									class="oi oi-brush" title="Editar" aria-hidden="true"></span>
-							</a>
+							<td colspan="2">
+								<a class="btn btn-info btn-sm" th:href="@{/cargos/editar/{id} (id=${nomeVariavelQlqr.id})}" role="button"> 
+									<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
+								</a>
 								<button type="button" class="btn btn-danger btn-sm">
 									<span class="oi oi-circle-x" title="Exclusão desabilitada"
 										aria-hidden="true"></span>
