Aulas 49 e 50 - Inserindo funcionarios e Conversores para funcionarios e correcao de bugs com Transactional

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -49,6 +49,7 @@
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="/webjars/jquery/jquery.min.js"></script>
+	<!-- aula 49 - webjar necessário para aplicar mascaras nos documentos HTML junto a tag "data-mask" -->
 	<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
