--- a/src/main/resources/templates/funcionario/lista.html
+++ b/src/main/resources/templates/funcionario/lista.html
@@ -100,6 +100,11 @@
 
 
 			<div class="table-responsive">
+			
+			<!-- aula 41 - usa a pagina de alert como um fragmento para exibir mensagens de sucess ou fail -->
+			<!-- aula 41 - quem comanda os alerts são os métodos do controller -->
+			<div th:replace="fragments/alert"></div>
+			
 				<table class="table table-striped table-hover table-sm">
 					<thead>
 						<tr>
@@ -139,21 +144,26 @@
 							</td>
 							<td th:text="${#temporals.format(nomeVariavelQlqr.dataEntrada, 'dd/MM/yyyy')}">01/10/2014</td>
 							<td th:text="${#temporals.format(nomeVariavelQlqr.dataSaida, 'dd/MM/yyyy')}">data saida</td>
-							<td colspan="2"><a class="btn btn-info btn-sm"
-								href="/funcionarios/editar/1" role="button"> <span
-									class="oi oi-brush" title="Editar" aria-hidden="true"></span>
-							</a>
-								<button id="btn_funcionarios/excluir/1" type="button"
+							<td colspan="2">
+								<a class="btn btn-info btn-sm"
+									th:href="@{/funcionarios/editar/{id} (id=${nomeVariavelQlqr.id})}" role="button"> 
+									<span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
+								</a>
+								<button th:id="${#strings.concat('btn_funcionarios/excluir/', nomeVariavelQlqr.id) }" type="button"
 									class="btn btn-danger btn-sm" data-toggle="modal"
 									data-target="#myModal">
 									<span class="oi oi-circle-x" title="Excluir" aria-hidden="true"></span>
-								</button></td>
+								</button>
+							</td>
 						</tr>
 						
 					</tbody>
 				</table>
 			</div>
 		</div>
+		
+		<!-- aula 52 - 3:25 -->
+		<div th:replace="fragments/modal :: modal"></div>
 	</section>
 
 </body>
