--- a/src/main/resources/templates/funcionario/lista.html
+++ b/src/main/resources/templates/funcionario/lista.html
@@ -40,9 +40,9 @@
 
 						<nav class="navbar navbar-light bg-light">
 							<form class="form-inline" method="GET"
-								action="/funcionarios/buscar/nome">
+								th:action="@{/funcionarios/buscar/nome}">
 								<input class="form-control mr-sm-2" type="search"
-									placeholder="nome" aria-label="Search" name="nome" />
+									placeholder="nome" aria-label="Search" th:name="nome" />
 								<button class="btn btn-outline-success my-2 my-sm-0">Search</button>
 							</form>
 						</nav>
