--- a/src/main/resources/templates/departamento/cadastro.html
+++ b/src/main/resources/templates/departamento/cadastro.html
@@ -31,6 +31,12 @@
 			<form
 				th:action="${departamento.id == null} ? @{/departamentos/salvar} : @{/departamentos/editar}"
 				th:object="${departamento}" method="POST">
+				
+				<!-- aula 57 - IMPORTANTE:
+					PARA FUNCIONAR, ESTE FRAGMENTO DEVE ESTAR DENTRO DE UM FORM
+				inclui fragmento na tela caso algum campo nao passe na validação -->
+				<div th:replace="fragments/validacao :: validacao"></div>
+				
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="nome">Departamento</label> <input type="text"
