--- a/src/main/resources/templates/funcionario/cadastro.html
+++ b/src/main/resources/templates/funcionario/cadastro.html
@@ -31,96 +31,144 @@
 			<form th:action="${funcionario.id == null} ? @{/funcionarios/salvar} : @{/funcionarios/editar}" method="POST"
 				  th:object="${funcionario}">
 				<div class="form-row">
+					<!-- aula 59: th:classappend para validacao campo a campo-->
 					<div class="form-group col-md-6">
-						<label for="nome">Nome do Funcionário</label> <input type="text"
-							class="form-control" id="nome" placeholder="Nome Completo"
-							autofocus="autofocus" th:field="*{nome}"/>
-						<div class="invalid-feedback"></div>
+						<label for="nome">Nome do Funcionário</label> 
+						<input type="text" class="form-control" id="nome" placeholder="Nome Completo"
+							autofocus="autofocus" th:field="*{nome}"
+							th:classappend="${#fields.hasErrors('nome')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{nome}"></span>
+							</div>
 					</div>
 					<div class="form-group col-md-6">
 						<!-- aula 49 - atencao ao usar mascara. neessario lib webjar/javascript -->
-						<label for="salario">Salário Bruto</label> <input type="text"
+						<label for="salario">Salário Bruto</label> 
+						<input type="text"
 							class="form-control" id="salario" data-mask="#.##0,00"
-							data-mask-reverse="true" th:field="*{salario}" />
-						<div class="invalid-feedback"></div>
+							data-mask-reverse="true" th:field="*{salario}" 							
+							th:classappend="${#fields.hasErrors('salario')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{salario}"></span>
+							</div>
 					</div>
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
-						<label for="dataEntrada">Data de Entrada</label> <input
-							type="date" class="form-control" id="dataEntrada"
-							th:field="*{dataEntrada}" />
-						<div class="invalid-feedback"></div>
+						<label for="dataEntrada">Data de Entrada</label> 
+						<input type="date" class="form-control" id="dataEntrada"
+							th:field="*{dataEntrada}" 							
+							th:classappend="${#fields.hasErrors('dataEntrada')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{dataEntrada}"></span>
+							</div>
 					</div>
 					<div class="form-group col-md-6">
-						<label for="dataSaida">Data de Saída</label> <input type="date"
-							class="form-control" id="dataSaida" th:field="*{dataSaida}" />
-						<div class="invalid-feedback"></div>
+						<label for="dataSaida">Data de Saída</label> 
+						<input type="date"
+							class="form-control" id="dataSaida" th:field="*{dataSaida}" 
+							th:classappend="${#fields.hasErrors('dataSaida')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+						<div class="invalid-feedback">
+							<span th:errors="*{dataSaida}"></span>
+						</div>
 					</div>
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="cargo">Cargo</label> 
 						<select id="cargo"
-							class="form-control" th:field="*{cargo}">
+							class="form-control" th:field="*{cargo}"
+							th:classappend="${#fields.hasErrors('cargo')} ? 'is-invalid'">
 							<option value="">Selecione...</option>
 							<option th:each="nomeVariavelQlqr : ${variavelCargosDoControllerParaFrontend}" 
 							th:value="${nomeVariavelQlqr.id}" th:text="${nomeVariavelQlqr.nome}"></option>
 						</select>
-						<div class="invalid-feedback"></div>
+						<div class="invalid-feedback">
+							<span th:errors="*{cargo}"></span>
+						</div>
 					</div>
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="cidade">Cidade</label> <input type="text"
-							class="form-control" id="cidade" th:field="*{endereco.cidade}" />
-						<div class="invalid-feedback"></div>
+							class="form-control" id="cidade" th:field="*{endereco.cidade}" 
+							th:classappend="${#fields.hasErrors('endereco.cidade')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{endereco.cidade}"></span>
+							</div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="logradouro">Logradouro</label> <input type="text"
 							class="form-control" id="logradouro"
-							placeholder="logradouro sem número" th:field="*{endereco.logradouro}"  />
-						<div class="invalid-feedback"></div>
+							placeholder="logradouro sem número" th:field="*{endereco.logradouro}"  
+							th:classappend="${#fields.hasErrors('endereco.logradouro')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{endereco.logradouro}"></span>
+							</div>
 					</div>
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="numero">Número</label> <input type="text"
-							class="form-control" id="numero" th:field="*{endereco.numero}"  />
-						<div class="invalid-feedback"></div>
+							class="form-control" id="numero" th:field="*{endereco.numero}"  ]
+							th:classappend="${#fields.hasErrors('endereco.numero')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{endereco.numero}"></span>
+							</div>
 					</div>
 					<div class="form-group col-md-6">
 						<label for="complemento">Complemento</label> <input type="text"
 							class="form-control" id="complemento"
 							placeholder="fundos, casa, AP. 102, .."
-							th:field="*{endereco.complemento}"  />
-						<div class="invalid-feedback"></div>
+							th:field="*{endereco.complemento}"  
+							th:classappend="${#fields.hasErrors('endereco.complemento')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{endereco.complemento}"></span>
+							</div>
 					</div>
 				</div>
 				<div class="form-row">
 					<div class="form-group col-md-6">
 						<label for="bairro">Bairro</label> <input type="text"
-							class="form-control" id="bairro" th:field="*{endereco.bairro}"  />
-						<div class="invalid-feedback"></div>
+							class="form-control" id="bairro" th:field="*{endereco.bairro}"  
+							th:classappend="${#fields.hasErrors('endereco.bairro')} ? 'is-invalid'"/>
+							<!-- div+span adicionado na aula 59 para trabalhar vinculado ao th:classappend -->
+							<div class="invalid-feedback">
+								<span th:errors="*{endereco.bairro}"></span>
+							</div>
 					</div>
 					<div class="form-group col-md-4">
 						<label for="uf">UF</label> 
 						<select id="uf" class="form-control"
-							th:field="*{endereco.uf}">
+							th:field="*{endereco.uf}" 
+							th:classappend="${#fields.hasErrors('endereco.uf')} ? 'is-invalid'">
 							<option value="">Selecione...</option>
 							<option th:each="nomeVariavelUFQlqr : ${variavelUFsDoControllerParaFrontend}" 
 							th:value="${nomeVariavelUFQlqr}" th:text="${nomeVariavelUFQlqr.sigla}"></option>
 
 						</select>
-						<div class="invalid-feedback"></div>
+						<div class="invalid-feedback">
+							<span th:errors="*{endereco.uf}"></span>
+						</div>
 					</div>
 					<div class="form-group col-md-2">
 						<label for="cep">Cep</label> 
 						<!-- aula 49 - atencao ao usar mascara. neessario lib webjar/javascript -->
 						<input type="text"
 							class="form-control" id="cep" data-mask="00000-000"
-							th:field="*{endereco.cep}"  />
-						<div class="invalid-feedback"></div>
+							th:field="*{endereco.cep}"  
+							th:classappend="${#fields.hasErrors('endereco.cep')} ? 'is-invalid'"/>
+						<div class="invalid-feedback">
+							<span th:errors="*{endereco.cep}"></span>
+						</div>
 					</div>
 				</div>
 				<input type="hidden" id="id" th:field="*{id}" />
