--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,41 +7,65 @@
 	<nav class="sidebar sidebar-open" th:fragment="nav-sidebar">
 		<ul class="nav nav-pills">
 			<li class="nav-item"><a class="nav-link " href="/"> <i
-					class="oi oi-home"></i> <span>Home</span>
+					class="oi oi-home"></i> 
+					<!-- aula 63 - ensinado a dar nomes aos componentes através do
+					arquivo messages.properties. Uma forma de centralizar
+					as informações da view -->
+					<span th:text="#{sidebar.link.home}">Home</span>
 			</a></li>
 		</ul>
 
 		<ul class="nav nav-pills">
-			<li class="nav-item"><span class="nav-link active">Departamentos</span></li>
-			<li class="nav-item"><a class="nav-link"
-				href="/departamentos/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
-			</a></li>
-			<li class="nav-item"><a class="nav-link"
-				href="/departamentos/listar"> <i class="oi oi-spreadsheet"></i>
-					<span>Listar </span>
-			</a></li>
+			<li class="nav-item">
+				<span class="nav-link active" th:text="#{sidebar.titulo.departamento}">Departamentos</span>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link"
+					href="/departamentos/cadastrar"> 
+					<i class="oi oi-plus"></i> 
+					<span th:text="#{sidebar.link.cadastrar}">Cadastrar</span>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link"
+				href="/departamentos/listar"> 
+					<i class="oi oi-spreadsheet"></i>
+					<span th:text="#{sidebar.link.listar}">Listar </span>
+				</a>
+			</li>
 		</ul>
 
 		<ul class="nav nav-pills">
-			<li class="nav-item"><span class="nav-link active">Cargos</span></li>
+			<li class="nav-item">
+				<span class="nav-link active" th:text="#{sidebar.titulo.cargo}">Cargos</span>
+			</li>
 			<li class="nav-item"><a class="nav-link"
-				href="/cargos/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-				</span>
+				href="/cargos/cadastrar"> <i class="oi oi-plus">
+				</i> 
+				<span th:text="#{sidebar.link.cadastrar}">>Cadastrar </span>
 			</a></li>
-			<li class="nav-item"><a class="nav-link" href="/cargos/listar">
-					<i class="oi oi-spreadsheet"></i> <span>Listar </span>
-			</a></li>
+			<li class="nav-item">
+				<a class="nav-link" href="/cargos/listar">
+				<i class="oi oi-spreadsheet"></i> 
+				<span th:text="#{sidebar.link.listar}">Listar </span>
+				</a>
+			</li>
 		</ul>
 
 		<ul class="nav nav-pills">
-			<li class="nav-item"><span class="nav-link active">Funcionários</span></li>
+			<li class="nav-item">
+				<span class="nav-link active" th:text="#{sidebar.titulo.funcionario}">Funcionários</span>
+			</li>
 			<li class="nav-item"><a class="nav-link"
-				href="/funcionarios/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar
-				</span>
-			</a></li>
-			<li class="nav-item"><a class="nav-link"
-				href="/funcionarios/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar
-				</span>
+				href="/funcionarios/cadastrar"> <i class="oi oi-plus"></i> 
+				<span th:text="#{sidebar.link.cadastrar}">>Cadastrar</span>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link"
+				href="/funcionarios/listar"> 
+				<i class="oi oi-spreadsheet"></i> 
+				<span th:text="#{sidebar.link.listar}">>Listar</span>
 			</a></li>
 		</ul>
 	</nav>
