--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -15,7 +15,7 @@
 						<span>Lista de Cargos</span></li>
 				</ul>
 			</div>
-			<a class="btn btn-primary btn-md" href="/cargos/cadastrar"
+			<a class="btn btn-primary btn-md" th:href="@{/cargos/cadastrar}"
 				role="button"> <span class="oi oi-plus" title="Cadastro"
 				aria-hidden="true"></span> <span>Novo Cargo</span>
 			</a>
