--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -55,6 +55,22 @@
 		                    </tr>	
 	                    </tbody>
 	                </table>
+	                
+	                <!-- aula 79 - inclusão da paginação nas listas 
+	                https://getbootstrap.com/docs/5.0/components/pagination/ -->
+	                <nav aria-label="Page navigation example">
+						  <ul class="pagination justify-content-center">
+						    <li class="page-item disabled">
+						      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+						    </li>
+						    <li class="page-item"><a class="page-link" href="#">1</a></li>
+						    <li class="page-item"><a class="page-link" href="#">2</a></li>
+						    <li class="page-item"><a class="page-link" href="#">3</a></li>
+						    <li class="page-item">
+						      <a class="page-link" href="#">Next</a>
+						    </li>
+						  </ul>
+					</nav>
 	            </div>
 	        </div>
 	        
