--- a/src/main/resources/templates/cargo/lista.html
+++ b/src/main/resources/templates/cargo/lista.html
@@ -38,7 +38,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="nomeVariavelQlqr : ${cargosVariavelController}">
+						<tr th:each="nomeVariavelQlqr : ${cargosPaginadosVariavelController.registros}">
 							<td th:text="${nomeVariavelQlqr.id}">1</td>
 							<td th:text="${nomeVariavelQlqr.nome}"></td>
 							<td th:text="${nomeVariavelQlqr.departamento.nome}"></td>
@@ -60,14 +60,14 @@
 	                https://getbootstrap.com/docs/5.0/components/pagination/ -->
 	                <nav aria-label="Page navigation example">
 						  <ul class="pagination justify-content-center">
-						    <li class="page-item disabled">
-						      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+						    <li class="page-item">
+						      <a class="page-link" th:href="@{/cargos/listar(page=${cargosPaginadosVariavelController.pagina - 1})}" tabindex="-1" aria-disabled="true">Prev</a>
 						    </li>
 						    <li class="page-item"><a class="page-link" href="#">1</a></li>
 						    <li class="page-item"><a class="page-link" href="#">2</a></li>
 						    <li class="page-item"><a class="page-link" href="#">3</a></li>
 						    <li class="page-item">
-						      <a class="page-link" href="#">Next</a>
+						      <a class="page-link" th:href="@{/cargos/listar(page=${cargosPaginadosVariavelController.pagina + 1})}">Next</a>
 						    </li>
 						  </ul>
 					</nav>
